--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.15", features = ["full"] }
 log = "0.4.14"
 env_logger = "0.8.4"
+
+[[bin]]
+name = "rongu-alpha"
+path = "src/main.rs"  
